# ObjectsDetector

./: CMakeLists.txt  LICENSE  ObjectsDetector.cpp  ProjectRootPath.h  ProjectRootPath.h.in  README.md  Singleton.h  Singleton.inl
Configuration/: DetectConfiguration.cpp  DetectConfiguration.h  DetectConfiguration.inl  FeatureExtractFilterThreshold.cpp  FeatureExtractFilterThreshold.h  ImagePreprocessingConfiguration.cpp  ImagePreprocessingConfiguration.h  SingleDetectConfiguration.cpp  SingleDetectConfiguration.h
Configuration/Builder/: DetectConfigurationBuilder.cpp  DetectConfigurationBuilder.h
Configuration/Director/: DetectConfigurationDirector.cpp  DetectConfigurationDirector.h
Detector/: IObjectsDetector.h
Detector/DeepLearning/: DNNObjectsDetector.cpp  DNNObjectsDetector.h
Detector/Traditional/: TraditionalObjectsDetector.cpp  TraditionalObjectsDetector.h
Entity/: CenterPoint.cpp  CenterPoint.h  Corner.cpp  Corner.h  InfoShower.h  ObjectInfo.cpp  ObjectInfo.h  ParamPair.cpp  ParamPair.h  Size.cpp  Size.h
FileAssistant/: FileAssistant.cpp  FileAssistant.h  FileHandler.cpp  FileHandler.h  IFileAssistant.h  UnixOSFileAssistant.cpp  UnixOSFileAssistant.h  WindowsOSFileAssistant.cpp  WindowsOSFileAssistant.h
Preprocessing/: IImagePreprocessing.h  IImagePreprocessingHandler.h  ImagePreprocessing.h  ImagePreprocessing.inl  ImagePreprocessingHandler.cpp  ImagePreprocessingHandler.h  PreprocessingStep.h
Util/: DisplayHandler.cpp  DisplayHandler.h  IDisplayHandler.h  IImageStorage.h  ImageStorage.cpp  ImageStorage.h  PlatformSupporter.cpp  PlatformSupporter.h
detect_result/: 1_pic.txt  2_pic.txt  3_pic.txt  4_pic.txt  9.7.IC.txt
